<resources>
    <string name="app_name">가따버려</string>
    <!-- Image Description -->
    <string name="description_folder">폴더 이미지</string>
    <!-- Text -->
    <string name="home_title_folder">폴더</string>
    <string name="home_title_category">카테고리</string>
    <string name="button_text_next">다음</string>
    <string name="title_section">어떤 제품인지 알려주세요.</string>
    <string name="title_contents">조금 알 것 같아요.</string>
    <string name="description_contents">등록 이미지</string>
    <string name="hint_contents">이름을 입력해주세요.</string>
    <string name="title_date">거의 다 됐어요!</string>
    <string name="text_add_image">여기를 눌러\n사진을 등록해주세요.</string>
    <string name="description_category">카테고리 이미지</string>
    <string name="text_add_date_start">개봉일</string>
    <string name="text_add_date_hint">날짜를 선택해주세요.</string>
    <string name="text_add_date_little">기억이 날 듯 말 듯</string>
    <string name="text_add_date_dont">잘 모르겠어요</string>
    <string name="text_default_folder">최근항목</string>
    <string name="text_add_item">등록하러 가기</string>
    <string name="sort_by_latest">최신순</string>
    <string name="sort_by_expiration_date">버리는순</string>
    <string name="title">Title</string>
    <string name="text_add_item_hint">아직 버릴 물건이 없어요.\n제품을 등록하면\n버릴 날짜를 알려드릴게요.</string>
    <string name="text_add_date_little_hint_number">0</string>
    <string name="text_add_date_little_hint">대략적인 느낌\n대략 언제 사용을 시작했는지 알려주세요.</string>
    <string name="text_add_date_dont_hint">괜찮아요. 오늘부터 우리 1일</string>
    <string name="text_add_date_little_text">주 전</string>

    <string name="text_camera_capture">확인</string>
    <string name="permission_denied">권한이 거부되었습니다. [설정] > [권한]에서 설정을 진행해주세요.</string>

    <string name="title_activity_select_folder">SelectFolderActivity</string>

    <string name="select_folder">폴더 선택</string>
    <string name="create_folder">폴더 만들기</string>
    <string name="select_folder_to_move">이동할 폴더를 선택해주세요.</string>
    <string name="enter_folder_name">폴더 이름을 입력해주세요.</string>
    <string name="select">선택</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    
    <string name="ask_drop_item">버리는 날이에요.\n이제 그만 보내줄까요?</string>

    <string name="edit">편집</string>
    <string name="delete">삭제</string>

    <string name="text_hint">제품 이름은 10글자 이내</string>
    <string name="start_day">개봉일</string>
    <string name="drop_day">버리는 날</string>

    <string name="toast_input_length">1자 이상 입력해주세요.</string>
    <string name="toast_delete">삭제되었습니다.</string>
    <string name="toast_edit_complete">수정이 완료되었습니다.</string>
    <string name="toast_move_complete">사진 이동이 완료되었습니다.</string>

</resources>
